# PropEireDb

./: .devcontainer.json  .flake8  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  scratch.ipynb
.github/workflows/: docker-image.yml
sql/: 1-propeiredb_schema.sql  2-propeiredb.residential_register.sql  3-propeiredb.geo_encoding_lookup.sql  4-propeiredb.residential_register_dublin_mapped.sql  5-propeiredb.agg_views.sql
src/: callbacks.py  cli.py  gunicorn.conf.py  layout.py  server_config.py  wsgi.py
src/assets/: dublin_boundaries.json  style.css
src/models/: data_model.py  graph_model.py  input_model.py
src/utils/: db_connections.py  db_utils.py  geo_encode_data.py  geojson_map_cleanse.py  pandas_upsert.py  ppr_data_pipeline.py
